# ChangeLog for www-client/chromium
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Sep 2010; Mike Gilbert <floppymaster@gmail.com>
  +files/chromium-gnome-keyring-r0.patch, chromium-9999.ebuild:
  Merge changes from gentoo

  29 Aug 2010; Mike Gilbert <floppymaster@gmail.com> +chromium-9999.ebuild,
  +files/chromium.xml, +files/chromium-launcher.sh,
  +files/chromium-plugins-path-r0.patch, +metadata.xml:
  Add chromium
