@@ -2,6 +2,6 @@ AUX chromium-gnome-keyring-r0.patch 2842 RMD160 1ac9a6e2785954a7a4f7f60988c8d7c1
 AUX chromium-launcher.sh 1097 RMD160 6a35819d6ae463d1614ecd5976fe8aeae1a3519e SHA1 93b8259fe9ddf6914faa9a4cdbaf451a97031228 SHA256 9d16e2afe508c33aa987001a0442696eaefd5cf91e7a6c9eeb900bc9824390c9
 AUX chromium-plugins-path-r0.patch 1043 RMD160 698a8562c866e046b1adf8553894ee08afb53a10 SHA1 0c41adad38478c4a12970af774e782ebb208a048 SHA256 3ba3bf1c3184fb2a0c7f493947d620fd1678efdd3661ac36be3d1cb00146d108
 AUX chromium.xml 390 RMD160 6b2f901da76555a7112f71a6f9dae6e2e3307324 SHA1 81148a0b094bc697ff2c9d33efe976b1bffb72a3 SHA256 a81c6257346eaa4f6389fc9ea8834fd2dd3b006cf4e9e999028aca812d76fe9a
-EBUILD chromium-9999.ebuild 7512 RMD160 85aa76b61bb734d78f5cd3de0defb2965492f7e2 SHA1 e82a38cdba5720967e76c23ab1612b9fd270df6f SHA256 955a29807612a87da79448fe5d4426e1b7ebab4148db76394cd9a934c5f26d17
-MISC ChangeLog 466 RMD160 24ab0bd5354e255dfa7af9a1289c0da42715ccb9 SHA1 d3aa31eee23ce939d0b96b0ced1faa93e3b7528c SHA256 16e034342e04c5159c33dac7993a0cff4773cd5627335f8a8c0f41405126c6c8
+EBUILD chromium-9999.ebuild 7293 RMD160 5ed6a47d8d316541b853b884e8a26f54647d9cbe SHA1 e9cab82cc0dab2d86df83e7fa88c2a67eea73ec8 SHA256 c1bdbdf2757844abb22b07fd106f48c10bec5c22c96889425e7e60d8b0bc8e7b
+MISC ChangeLog 565 RMD160 83e5dd5b2a45026495739a0844cbc72816fc161a SHA1 157293519f40b5f1484c57a6d35d5cdfdc4cfd85 SHA256 08587262212e6ea86e6a31ec1fc7d3988bc18fc4b028beeef0d27710986d501b
 MISC metadata.xml 363 RMD160 32404cb8fad38c114962f41af7e80d2a58b652b6 SHA1 66006325901eb96e28bd6948b18cc0cb959c6bbb SHA256 f1f6b6c4b47c573020a27482f418926cfa98cbd6e6c6fee6f9287ecda558bc02
