@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Sep 2010; Mike Gilbert <floppymaster@gmail.com> chromium-9999.ebuild:
+  Merge gentoo changes
+
   09 Sep 2010; Mike Gilbert <floppymaster@gmail.com>
   +files/chromium-gnome-keyring-r0.patch, chromium-9999.ebuild:
   Merge changes from gentoo
